[Portal][fix] make the hightligh color more visible
Issue #8.
The hightligh color replaced rgba(172, 211, 169, 0.192) with #e6fcf2.

--- a/_sass/_variables/custom.scss
+++ b/_sass/_variables/custom.scss
@@ -38,7 +38,7 @@ $note-danger-icon           : "\f056";
 
 // label colors
 // --------------------------------------------------
-$label-default              : rgba(172, 211, 169, 0.192);
+$label-default              : #e6fcf2;
 $label-success              : $note-success-bg;
 $label-warning              : $note-warning-bg ;
 $label-danger               : $note-danger-bg ;
